tests/errors/err_17_return_no_value.tslang
desnote ========================================
desnote TEST: ERROR - deschodt without expression
desnote Tests: Return without value
desnote Expected: Lexer error
desnote ========================================

Deschodt Eric() -> int
    deschodt
